[package]
name = "elgamal_ristretto"
version = "0.3.0"
authors = ["Inigo Querejeta Azurmendi <querejeta.inigo@gmail.com>", "Gonçalo Pestana <g6pestana@gmail.com>"]
edition = "2018"
exclude = ["**/.gitignore", ".gitignore","/target/*"]
description = "A pure-Rust implementation of ElGamal encryption using the Ristretto group over Curve25519"
readme = "README.md"
keywords = ["cryptography", "elgamal", "additive-homomorphic"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/iquerejeta/elgamal"
license = "MIT"


[dependencies]
curve25519-dalek-ng = { version = "4.1.1", features = ["alloc"] }
zkp = { git = "https://github.com/erwanor/zkp.git" }
rand_core = { version = "0.6.3", features = [ "getrandom" ] }
sha2 = "0.9.0"
clear_on_drop = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html"
    ]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "elgamal-ristretto"
harness = false

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek-ng/std"]
nightly = ["curve25519-dalek-ng/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek-ng/u64_backend"]
